--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest
-          python -m pytest -s tests/
+          python scripts/run_tests.py
