--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Set up Java
+        run: |
+          antlr4 -Dlanguage=Python3 project/language.g4 -visitor -o project/language
       - name: Test with pytest
         run: |
           pip install pytest
